<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_scan</name>
  <version>0.0.0</version>
  <description>Generates Occupancy Grid and Lidar Frame</description>
  <maintainer email="tahseenreza101@gmail.com">thussain</maintainer>
  <license>Ament Python</license>

  
  <build_depend>ros-perception/pointcloud</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <depend>im</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs_py</depend>
  <depend>geometry_msgs</depend>
  <depend>spatialmath</depend>
  <depend>scipy</depend>
  <depend>message_filters</depend>
  <depend>open3d</depend>
  <depend>nav_msgs</depend>
  
  <exec_depend>ros-perception/pointcloud</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
